RESOLVED FIXED298518
Netflix playback will error
https://bugs.webkit.org/show_bug.cgi?id=298518
Summary Netflix playback will error
Jean-Yves Avenard [:jya]
Reported 2025-09-07 17:57:57 PDT
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2025-09-07 18:01:46 PDT
EWS
Comment 2 2025-09-07 21:25:46 PDT
Committed 299684@main (f3d00e7a8f81): <https://commits.webkit.org/299684@main> Reviewed commits have been landed. Closing PR #50430 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.