Netflix playback will error https://bugs.webkit.org/show_bug.cgi?id=298518 rdar://160078410

Reviewed by Gerald Squelart.

Typo introduced in 299390@main.

* Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
(WebCore::SourceBufferPrivateAVFObjC::needsVideoLayer const):

Canonical link: https://commits.webkit.org/299684@main